--- a/render.yaml
+++ b/render.yaml
@@ -15,6 +15,8 @@ services:
         value: "30"
       - key: DECISION_SECONDS
         value: "60"
+      - key: MERGE_DEFAULT_INSTRUMENTS
+        value: "true"
       - key: OANDA_API_KEY
         sync: false
       - key: OANDA_ACCOUNT_ID
