Change webservice type to web in render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -20,7 +20,7 @@ services:
       - key: OANDA_ACCOUNT_ID
         sync: false
 # ---------- MCP SERVICES ----------
-  - type: webservice
+  - type: web
     name: mcp-web
     env: docker
     plan: free
