--- a/render.yaml
+++ b/render.yaml
@@ -34,17 +34,17 @@ services:
       - key: RENDER_DEPLOY_HOOK_URL
         sync: false
 
-  - type: cron_job
+   - type: cron_job
     name: mcp-optimiser
     env: docker
     plan: starter
     dockerfilePath: mcp/Dockerfile
-    Command: >
+    command: >
       python optimiser.py && python patcher.py
     schedule: "0 1 * * *"
     envVars:
-      - serviceName: mcp-web
- sync: false
+      - key: MCP_API_KEY
+        sync: false
       - key: GH_PAT
         sync: false
       - key: RENDER_DEPLOY_HOOK_URL
