--- a/render.yaml
+++ b/render.yaml
@@ -34,7 +34,7 @@ services:
       - key: RENDER_DEPLOY_HOOK_URL
         sync: false
 
-  - type: cronJob          # 2 spaces before the dash
+  - type: cron               # ← exactly “cron”
     name: mcp-optimiser
     env: docker
     plan: starter
@@ -49,5 +49,7 @@ services:
         sync: false
       - key: RENDER_DEPLOY_HOOK_URL
         sync: false
+
+
         
   
